--- a/packages/features/s-inline-feature/package.json
+++ b/packages/features/s-inline-feature/package.json
@@ -20,8 +20,8 @@
     "module": "./dist/pkg/esm/js/exports.js",
     "exports": {
         ".": {
-            "import": "./dist/pkg/esm/js/exports.js",
-            "require": "./dist/pkg/cjs/js/exports.js"
+            "require": "./dist/pkg/cjs/js/exports.js",
+            "import": "./dist/pkg/esm/js/exports.js"
         }
     }
 }
