--- a/packages/vite/s-vite/package.json
+++ b/packages/vite/s-vite/package.json
@@ -51,8 +51,8 @@
     "peerDependencies": {
         "postcss": "^7 || ^8"
     },
-    "main": "dist/pkg/cjs/node/exports.js",
-    "module": "dist/pkg/esm/node/exports.js",
+    "main": "./dist/pkg/cjs/node/exports.js",
+    "module": "./dist/pkg/esm/node/exports.js",
     "exports": {
         ".": {
             "require": "./dist/pkg/cjs/node/exports.js",
