--- a/packages/core/s-stdio/package.json
+++ b/packages/core/s-stdio/package.json
@@ -13,7 +13,7 @@
         "@coffeekraken/s-log": "^2.0.0-alpha.6",
         "@coffeekraken/s-promise": "^2.0.0-alpha.6",
         "@coffeekraken/sugar": "^2.0.0-alpha.6",
-        "enquirer": "^2.3.6",
+        "enquirer": "^2.3.6"
     },
     "main": "dist/pkg/cjs/node/exports.js",
     "module": "dist/pkg/esm/node/exports.js",
